--- a/WBooks/Supporting Files/Info.plist
+++ b/WBooks/Supporting Files/Info.plist
@@ -2,6 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>Parameters</key>
+	<dict>
+		<key>API_BASE_URL</key>
+		<string>$(API_BASE_URL)</string>
+	</dict>
 	<key>UIAppFonts</key>
 	<array>
 		<string>SFUIText-Bold.ttf</string>
